--- a/index.html
+++ b/index.html
@@ -36,6 +36,44 @@
           <div class="price">$ 68,00</div>
           <button><a href="">View Product</a></button>
         </div>
+        <div class="konten">
+          <div class="nav-konten">
+            <h2>Shop The Latest</h2>
+            <p>View All</p>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="assets/img/Img 01.png" alt="" />
+            <h2>Lira Earrings</h2>
+            <p>$ 20,00</p>
+          </div>
+          <div class="card">
+            <img src="assets/img/Img 01.png" alt="" />
+            <h2>Lira Earrings</h2>
+            <p>$ 20,00</p>
+          </div>
+          <div class="card">
+            <img src="assets/img/Img 01.png" alt="" />
+            <h2>Lira Earrings</h2>
+            <p>$ 20,00</p>
+          </div>
+          <div class="card">
+            <img src="assets/img/Img 01.png" alt="" />
+            <h2>Lira Earrings</h2>
+            <p>$ 20,00</p>
+          </div>
+          <div class="card">
+            <img src="assets/img/Img 01.png" alt="" />
+            <h2>Lira Earrings</h2>
+            <p>$ 20,00</p>
+          </div>
+          <div class="card">
+            <img src="assets/img/Img 01.png" alt="" />
+            <h2>Lira Earrings</h2>
+            <p>$ 20,00</p>
+          </div>
+        </div>
       </div>
       <div class="footer"></div>
     </div>
